--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
       - ./src/main/resources/dummy-data.sql:/docker-entrypoint-initdb.d/dummy-data.sql
       - ./mysql-config/my.cnf:/etc/mysql/conf.d/my.cnf  # 사용자 정의 설정 파일
     tty: true
-
+  redis:
+    image: redis:alpine
+    container_name: redis_boot
+    ports:
+      - 6379:6379
 volumes:
   mysql_data:
